force-app/main/default/objects/sked_Drive__c/fields/sked_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sked_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Drives on Calendar</relationshipLabel>
    <relationshipName>sked_Drives</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>