force-app/main/default/objects/sked_Drive__c/fields/sked_Optimization_Run__c.field-meta.xml
<CustomField>
    <fullName>sked_Optimization_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HRP-12670</description>
    <label>Optimization Run</label>
    <referenceTo>sked_Optimization_Run__c</referenceTo>
    <relationshipLabel>Drives on Calendar</relationshipLabel>
    <relationshipName>Drives_on_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>