force-app/main/default/objects/sked_Drive__c/fields/sked_Point__c.field-meta.xml
<CustomField>
    <fullName>sked_Point__c</fullName>
    <label>Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>