force-app/main/default/objects/sked_Drive__c/fields/sked_Post_Migration_Completed_Steps__c.field-meta.xml
<CustomField>
    <fullName>sked_Post_Migration_Completed_Steps__c</fullName>
    <label>Post Migration Completed Steps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Populate Next/Previous Drive</fullName>
            </value>
            <value>
                <fullName>Process Linked Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>