force-app/main/default/objects/sked_Drive__c/fields/sked_Prefer_System_Generated_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>sked_Prefer_System_Generated_Vehicles__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Prefer system generated vehicles</label>
    <type>Checkbox</type>
</CustomField>