force-app/main/default/objects/sked_Drive__c/fields/sked_Procedure_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sked_Procedure_Capacity__c</fullName>
    <label>Procedure Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>