force-app/main/default/objects/sked_Drive__c/fields/sked_Procedures_Projected__c.field-meta.xml
<CustomField>
    <fullName>sked_Procedures_Projected__c</fullName>
    <label>Procedures Projected</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>