force-app/main/default/objects/sked_Drive__c/fields/sked_Productivity_Metric__c.field-meta.xml
<CustomField>
    <fullName>sked_Productivity_Metric__c</fullName>
    <label>Productivity Metric</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>