force-app/main/default/objects/sked_Drive__c/fields/sked_Promotions__c.field-meta.xml
<CustomField>
    <fullName>sked_Promotions__c</fullName>
    <label>Promotions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>