force-app/main/default/objects/sked_Drive__c/fields/sked_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>sked_Record_URL__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) &amp; Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record URL</label>
    <type>Text</type>
</CustomField>