force-app/main/default/objects/sked_Drive__c/fields/sked_Redcross_Volunteer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked_Redcross_Volunteer_Quantity__c</fullName>
    <description>This field is created as part of HRP-13146</description>
    <label>Red Cross Volunteer Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>