force-app/main/default/objects/sked_Drive__c/fields/sked_Redcross_Volunteer_Required__c.field-meta.xml
<CustomField>
    <fullName>sked_Redcross_Volunteer_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created as part of HRP-13146</description>
    <label>Red Cross Volunteer  Required</label>
    <type>Checkbox</type>
</CustomField>