force-app/main/default/objects/sked_Drive__c/fields/sked_Rejection_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Rejection_Reason_Code__c</fullName>
    <label>Rejection Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Calendar Culture</fullName>
            </value>
            <value>
                <fullName>Critical role unavailable</fullName>
            </value>
            <value>
                <fullName>Insufficient staffing</fullName>
            </value>
            <value>
                <fullName>No vehicles</fullName>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Reason 1</fullName>
                <isActive>false</isActive>
                <label>Reason 1</label>
            </value>
            <value>
                <fullName>Reason 2</fullName>
                <isActive>false</isActive>
                <label>Reason 2</label>
            </value>
            <value>
                <fullName>Reason 3</fullName>
                <isActive>false</isActive>
                <label>Reason 3</label>
            </value>
            <value>
                <fullName>Reason 4</fullName>
                <isActive>false</isActive>
                <label>Reason 4</label>
            </value>
            <value>
                <fullName>Reason 5</fullName>
                <isActive>false</isActive>
                <label>Reason 5</label>
            </value>
            <value>
                <fullName>Reason 6</fullName>
                <isActive>false</isActive>
                <label>Reason 6</label>
            </value>
            <value>
                <fullName>Turnaround time</fullName>
            </value>
            <value>
                <fullName>Union requirements conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>