force-app/main/default/objects/sked_Drive__c/fields/sked_Replacement_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Replacement_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Replacement Drives</relationshipLabel>
    <relationshipName>sked_Replacement_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>