force-app/main/default/objects/sked_Drive__c/fields/sked_Route_Approval_Request_To__c.field-meta.xml
<CustomField>
    <fullName>sked_Route_Approval_Request_To__c</fullName>
    <label>Route Approval Request To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request DM evaluation</fullName>
            </value>
            <value>
                <fullName>Request APS exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>