force-app/main/default/objects/sked_Drive__c/fields/sked_RTV_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_RTV_Approval_Status__c</fullName>
    <label>RTV Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>DM Approved</fullName>
            </value>
            <value>
                <fullName>CM Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>