force-app/main/default/objects/sked_Drive__c/fields/sked_Shadow_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Shadow_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shadow Drive</label>
    <referenceTo>sked_Shadow_Drive__c</referenceTo>
    <relationshipLabel>Drives on Calendar</relationshipLabel>
    <relationshipName>sked_Drives_on_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>