force-app/main/default/objects/sked_Drive__c/fields/sked_Shifts_Missing_Time_Blocks__c.field-meta.xml
<CustomField>
    <fullName>sked_Shifts_Missing_Time_Blocks__c</fullName>
    <description>HRP-15704 New Roll up Sum field to get the total of shifts missing time blocks. Value 0 means all the shifts has time block. Non Zero value means one of the shifts is missing the time block.</description>
    <label>Shifts Missing Time Blocks</label>
    <summarizedField>sked_Drive_Shift__c.sked_Is_Time_Block_Missing__c</summarizedField>
    <summaryForeignKey>sked_Drive_Shift__c.sked_Drive__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>