force-app/main/default/objects/sked_Drive__c/fields/sked_Staff_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sked_Staff_Capacity__c</fullName>
    <label>Staff Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>