force-app/main/default/objects/sked_Drive__c/fields/sked_Staff_Delta__c.field-meta.xml
<CustomField>
    <fullName>sked_Staff_Delta__c</fullName>
    <formula>sked_Total_Staff_Requested__c - sked_Staff_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>