force-app/main/default/objects/sked_Drive__c/fields/sked_Staff_Schedule_Published__c.field-meta.xml
<CustomField>
    <fullName>sked_Staff_Schedule_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Schedule Published?</label>
    <type>Checkbox</type>
</CustomField>