force-app/main/default/objects/sked_Drive__c/fields/sked_Staging_Location__c.field-meta.xml
<CustomField>
    <fullName>sked_Staging_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staging Location</label>
    <referenceTo>sked_Staging_Location__c</referenceTo>
    <relationshipLabel>Drives on Calendar</relationshipLabel>
    <relationshipName>Drives_on_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>