force-app/main/default/objects/sked_Drive__c/fields/sked_Submission_Notes__c.field-meta.xml
<CustomField>
    <fullName>sked_Submission_Notes__c</fullName>
    <label>Submission Notes</label>
    <type>TextArea</type>
</CustomField>