force-app/main/default/objects/sked_Drive__c/fields/sked_Surrogate_Drive_for__c.field-meta.xml
<CustomField>
    <fullName>sked_Surrogate_Drive_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surrogate Drive for</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Surrogate Drives</relationshipLabel>
    <relationshipName>sked_Surrogate_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>