force-app/main/default/objects/sked_Drive__c/fields/sked_Timezone__c.field-meta.xml
<CustomField>
    <fullName>sked_Timezone__c</fullName>
    <formula>sked_Drive_Site__r.sked_Timezone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>