force-app/main/default/objects/sked_Drive__c/fields/sked_Total_Equipment_Requested__c.field-meta.xml
<CustomField>
    <fullName>sked_Total_Equipment_Requested__c</fullName>
    <label>Total Equipment Requested</label>
    <summarizedField>sked_Drive_Shift__c.sked_Equipment__c</summarizedField>
    <summaryForeignKey>sked_Drive_Shift__c.sked_Drive__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>