force-app/main/default/objects/sked_Drive__c/fields/sked_Total_Staff_Requested__c.field-meta.xml
<CustomField>
    <fullName>sked_Total_Staff_Requested__c</fullName>
    <label>Total Staff Requested</label>
    <summarizedField>sked_Drive_Shift__c.sked_Staff_Setup__c</summarizedField>
    <summaryForeignKey>sked_Drive_Shift__c.sked_Drive__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>