force-app/main/default/objects/sked_Drive__c/fields/sked_Travel_Time_Change_DCR_Required__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Change_DCR_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Time Change DCR Required</label>
    <type>Checkbox</type>
</CustomField>