force-app/main/default/objects/sked_Drive__c/fields/sked_Travel_Time_CO_To_Site__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_CO_To_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to access [Co to site] travel time data.</description>
    <label>Travel Time CO To Site</label>
    <referenceTo>sked_Travel_Time_Index_Item__c</referenceTo>
    <relationshipLabel>Drives on Calendar (CO To Site)</relationshipLabel>
    <relationshipName>sked_Drives_Co_To_Site</relationshipName>
    <type>Lookup</type>
</CustomField>