force-app/main/default/objects/sked_Drive__c/fields/sked_Use_Chaser_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>sked_Use_Chaser_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Chaser Vehicle</label>
    <type>Checkbox</type>
</CustomField>