force-app/main/default/objects/sked_Drive__c/fields/sked_Vehicle_Types__c.field-meta.xml
<CustomField>
    <fullName>sked_Vehicle_Types__c</fullName>
    <label>Vehicle Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Cargo Van</fullName>
            </value>
            <value>
                <fullName>ProMaster</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>