force-app/main/default/objects/sked_Drive__c/fields/sked_Vehicles_Allocated__c.field-meta.xml
<CustomField>
    <fullName>sked_Vehicles_Allocated__c</fullName>
    <label>Vehicles Allocated</label>
    <summarizedField>sked_Drive_Shift__c.sked_Vehicles_Allocated__c</summarizedField>
    <summaryForeignKey>sked_Drive_Shift__c.sked_Drive__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>