force-app/main/default/objects/sked_Drive__c/fields/Supervisory_Role__c.field-meta.xml
<CustomField>
    <fullName>Supervisory_Role__c</fullName>
    <label>Supervisory Role</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>