force-app/main/default/objects/sked_Drive__c/validationRules/Cancelled_Drive_Cannot_Move_Back.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Drive_Cannot_Move_Back</fullName>
    <active>false</active>
    <description>A drive in a &#39;Cancel&#39; status should not be allowed to move back to prior drive status</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;
ISCHANGED(sked_Status__c) &amp;&amp;
ISPICKVAL(PRIORVALUE(sked_Status__c), &quot;Cancel&quot;) &amp;&amp;
NOT(ISPICKVAL(sked_Status__c, &quot;Cancel&quot;)) &amp;&amp;
$Profile.Name &lt;&gt; &#39;System Administrator&#39; &amp;&amp;
$Profile.Name &lt;&gt; &#39;Global Admin&#39;</errorConditionFormula>
    <errorMessage>A cancelled drive cannot be moved back to another drive status.</errorMessage>
</ValidationRule>