force-app/main/default/objects/sked_Drive__c/validationRules/Cannot_change_Drive_Date_across_Taxonomy.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Drive_Date_across_Taxonomy</fullName>
    <active>true</active>
    <description>A Drive Date change cannot change to cross a Taxonomy effective date.</description>
    <errorConditionFormula>NOT( ISNEW() ) &amp;&amp;
ISCHANGED( sked_Drive_Date__c ) &amp;&amp;
NOT( ISBLANK( PRIORVALUE( sked_Drive_Date__c ) ) ) &amp;&amp;
(
    ISBLANK( sked_Drive_Date__c ) ||
    ( 
        PRIORVALUE( sked_Drive_Date__c ) &lt; DATEVALUE(&quot;2024-01-22&quot;) &amp;&amp;
        sked_Drive_Date__c &gt;= DATEVALUE(&quot;2024-01-22&quot;)
    ) ||
    ( 
        PRIORVALUE( sked_Drive_Date__c ) &gt;= DATEVALUE(&quot;2024-01-22&quot;) &amp;&amp;
        sked_Drive_Date__c &lt; DATEVALUE(&quot;2024-01-22&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Drive Date change interferes with Taxonomy effective dates. Please cancel and rebook. Any scheduled donors should be managed through the Notifying Donors of Drive Change policy.</errorMessage>
</ValidationRule>