force-app/main/default/objects/sked_Drive__c/validationRules/Cannot_change_Drive_Date_can_com_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Drive_Date_can_com_status</fullName>
    <active>true</active>
    <description>All Users can not change the drive date when the opportunity status is Cancelled. Except System Admin.</description>
    <errorConditionFormula>AND(
ISPICKVAL(sked_Status__c , &#39;Complete&#39;),
NOT($Profile.Name = &#39;System Administrator&#39;),
ISCHANGED(sked_Drive_Date__c)
)
||
AND(
ISPICKVAL(sked_Status__c , &#39;Cancel&#39;),
NOT($Profile.Name = &#39;System Administrator&#39;),
ISCHANGED(sked_Drive_Date__c)
)</errorConditionFormula>
    <errorMessage>Drive Date cannot be changed on a completed/cancelled Drive.</errorMessage>
</ValidationRule>