force-app/main/default/objects/sked_Drive__c/validationRules/Restrict_DriveConfirm_wo_AccInternalName.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_DriveConfirm_wo_AccInternalName</fullName>
    <active>true</active>
    <description>The Account Internal Name field must be populated in order to move the drive to &quot;Confirmed&quot; status</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(sked_Status__c),
ISBLANK(sked_Opportunity__r.Account.Internal_Name__c),
ISPICKVAL(sked_Type_of_Drive__c, &quot;Mobile&quot;) , 
ISPICKVAL(sked_Status__c, &quot;Confirmed&quot;))</errorConditionFormula>
    <errorMessage>Please populate Account Internal Name before moving this mobile drive to &#39;Confirmed&#39; Status</errorMessage>
</ValidationRule>