force-app/main/default/objects/sked_Drive__c/validationRules/WB_Proj_Req_Tentative_Confirmed_Drive.validationRule-meta.xml
<ValidationRule>
    <fullName>WB_Proj_Req_Tentative_Confirmed_Drive</fullName>
    <active>true</active>
    <description>This validation will restrict users to create/update a future tentative/confirmed drive with WB procedures populated</description>
    <errorConditionFormula>AND(ISBLANK(sked_WB_Projected_Procedures__c) ,
sked_Is_Surrogate__c != TRUE,
sked_Drive_Date__c &gt;= today(),
OR(
ISPICKVAL(sked_Status__c, &#39;Tentative&#39;),
ISPICKVAL(sked_Status__c, &#39;Confirmed&#39;))
)</errorConditionFormula>
    <errorMessage>WB Projected procedures is required, if drive is in Tentative or Confirmed status</errorMessage>
</ValidationRule>