force-app/main/default/objects/sked_Drive__c/listViews/ABC_Collection_Operation_DMPA_sked_Drive.listView-meta.xml
<ListView>
    <fullName>ABC_Collection_Operation_DMPA_sked_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>ABC Collection Operation: DMPA</label>
    <queue>ABC_Collection_Operation_DMPA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>