force-app/main/default/objects/sked_Drive__c/listViews/Adrian_MI_DMPA1_sked_Drive.listView-meta.xml
<ListView>
    <fullName>Adrian_MI_DMPA1_sked_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>Adrian MI: DMPA</label>
    <queue>Adrian_MI_DMPA1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>