force-app/main/default/objects/sked_Drive__c/listViews/Adrian_MI_PAs1_sked_Drive.listView-meta.xml
<ListView>
    <fullName>Adrian_MI_PAs1_sked_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>Adrian MI: PAs</label>
    <queue>Adrian_MI_PAs1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>