force-app/main/default/objects/sked_Drive__c/listViews/Alameda_CA_DMPA1_sked_Drive.listView-meta.xml
<ListView>
    <fullName>Alameda_CA_DMPA1_sked_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>Alameda CA: DMPA</label>
    <queue>Alameda_CA_DMPA1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>