force-app/main/default/objects/sked_Drive__c/listViews/Alameda_CA_PAs1_sked_Drive.listView-meta.xml
<ListView>
    <fullName>Alameda_CA_PAs1_sked_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>Alameda CA: PAs</label>
    <queue>Alameda_CA_PAs1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>