force-app/main/default/objects/sked_Drive__c/listViews/Albany_NY_PAs_sked_Drive.listView-meta.xml
<ListView>
    <fullName>Albany_NY_PAs_sked_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>Albany NY: PAs</label>
    <queue>Albany_NY_PAs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>