force-app/main/default/objects/sked_Drive__c/listViews/All_Drives_On_Calendar_QA.listView-meta.xml
<ListView>
    <fullName>All_Drives_On_Calendar_QA</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>sked_Drive_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Drives On Calendar QA</label>
</ListView>